Connected dashboard to command companion computer